[package]
name = "pandoc"
version = "1.22.1"
edition = "2018"
description = "A library to genenerate work with pandoc ast"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.94"

[[bin]]
name="pretty"
path= "src/pretty.rs"

[[bin]]
name="example"
path= "src/example.rs"